--- a/index.html
+++ b/index.html
@@ -7,6 +7,33 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <header>
+        <section class="banner">
+            <div class="banner-content">
+                <h4 class="letter">Bangladesh 2.0</h4>
+                <h1 class="banner-tittle">Idea , innovation , <br>
+                    vision and challenges in <br> New Bangladesh.</h1>
+                <button class="btn">Explore New Bangladesh</button>
+
+
+            </div>
+            <div class="banner-img">
+                <img src="assets/hero.png" alt="">
+
+
+            </div>
+
+
+
+        </section>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
