--- a/index.html
+++ b/index.html
@@ -27,8 +27,47 @@
 
         </section>
 
+
     </header>
     <main>
+
+        <section class="the-vision">
+            <h2>The Vision of Future</h2>
+            <p class="paragraph">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <div class="vision">
+                <div class="box1">
+                    <img src="assets/card-icon.png" alt="">
+                    <h3 class="box-tittle">Digital Transformation</h3>
+                    <p class="paragraph" class="paragraph">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <button class="btn1">Learn More</button>
+
+                </div>
+
+                <div class="box2">
+                    <img src="assets/card-icon.png" alt="">
+                    <h3 class="box-tittle">Green Energy</h3>
+                    <p class="paragraph">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <button class="btn2">Learn More</button>
+
+
+                </div>
+                <div class="box3">
+                    <img src="assets/card-icon.png" alt="">
+                    <h3 class="box-tittle">Modern Infrastructure</h3>
+                    <p class="paragraph">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                    <button class="btn3">Learn More</button>
+
+
+                </div>
+            </div>
+
+        </section>
+        <section class="chief-adviser">
+            <p></p>
+            <h4 class="adviser-tittle">Dr. Muhammad Yunus</h4>
+            <p class="adviser-description">Chief Adviser of the People's Republic of Bangladesh</p> 
+             
+        </section>
 
     </main>
     <footer>
