--- a/index.html
+++ b/index.html
@@ -147,6 +147,15 @@
             <button class="btn">Done Now</button>
 
         </section>
+        <section class="subscribe">
+            <h2>Subscribe Newsletter</h2>
+           <p class="adviser-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology, promoting inclusive growth.</p>
+           <input type="email" name="" id="" placeholder="Enter your email here
+           
+            ">
+           <button class="btn">Subscribe</button>
+            
+        </section>
 
     </main>
     <footer>
